Add native function, register ip
[change]
- add native function
- replace ip with register
- reformat code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required(VERSION 3.15.0)
 project(clox)
 
 add_compile_options("-Wall")
+add_definitions(-std=c17)
 
 set(EXECUTABLE_OUTPUT_PATH ../bin)
 
@@ -16,5 +17,8 @@ file(GLOB_RECURSE TEST_MAIN ${PROJECT_SOURCE_DIR}/src/test_main.c)
 
 include_directories(${PROJECT_SOURCE_DIR}/include)
 
-add_executable(clox ${MAIN} ${C_SRC} ${C_INC})
-add_executable(test_clox ${TEST_MAIN} ${C_SRC})
+add_executable(clox ${MAIN} ${C_SRC} ${C_INC}
+        include/value/native/clock.h
+        src/value/native/clock.c)
+add_executable(test_clox ${TEST_MAIN} ${C_SRC}
+        src/value/native/clock.c)
